--- a/package.json
+++ b/package.json
@@ -15,15 +15,25 @@
   , "lib": "./lib"
   , "test": "./test"
   }
-, "dependencies":
-  { "test": ">=0.0.10"
-  , "q": ">=0.1.0"
+, "overlay":
+  { "node":
+    { "dependencies":
+      { "test": ">=0.0.10"
+      , "q": ">=0.1.0"
+      }
+    }
+  , "teleport":
+    { "dependencies":
+      { "q": ">=0.1.0"
+      }
+    }
   }
 , "main": "./lib/meta-promise.js"
 , "scripts": { "test": "node test/all.js" }
 , "engines":
   { "node": ">=0.1.103"
   , "teleport": ">=0.2.0"
+  , "addon-sdk": ">=0.9.0"
   }
 , "licenses" :
   [ { "type" : "MPL 1.1/LGPL 2.1/GPL 2.0"
