--- a/package.json
+++ b/package.json
@@ -1,44 +1,59 @@
-{ "name": "meta-promise"
-, "version": "0.0.1"
-, "description": "ES Harmony Proxy based promise library."
-, "homepage": "http://github.com/Gozala/meta-promise/"
-, "keywords": ["promises", "utils", "harmony", "proxy"]
-, "contributors":
-  [ "Irakli Gozalishvili <rfobic@gmail.com> (http://jeditoolkit.com)" ]
-, "repository":
-  { "type": "git"
-  , "url": "git://github.com/Gozala/meta-promise.git"
-  }
-, "bugs": { "web": "http://github.com/Gozala/meta-promise/issues/" }
-, "directories":
-  { "doc": "./docs"
-  , "lib": "./lib"
-  , "test": "./test"
-  }
-, "overlay":
-  { "node":
-    { "dependencies":
-      { "test": ">=0.0.10"
-      , "q": ">=0.1.0"
+{
+  "name": "meta-promise",
+  "version": "0.0.2",
+  "description": "ES Harmony Proxy based promise library.",
+  "homepage": "http://github.com/Gozala/meta-promise/",
+  "keywords": [
+    "promises",
+    "utils",
+    "harmony",
+    "proxy"
+  ],
+  "contributors": [
+    "Irakli Gozalishvili <rfobic@gmail.com> (http://jeditoolkit.com)"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/Gozala/meta-promise.git"
+  },
+  "bugs": {
+    "url": "http://github.com/Gozala/meta-promise/issues/"
+  },
+  "directories": {
+    "doc": "./docs",
+    "lib": "./lib",
+    "test": "./test"
+  },
+  "overlay": {
+    "node": {
+      "dependencies": {
+        "test": ">=0.0.10",
+        "q": ">=0.1.0"
+      }
+    },
+    "teleport": {
+      "dependencies": {
+        "q": ">=0.1.0"
       }
     }
-  , "teleport":
-    { "dependencies":
-      { "q": ">=0.1.0"
-      }
+  },
+  "main": "./lib/meta-promise",
+  "scripts": {
+    "test": "node test/all.js"
+  },
+  "engines": {
+    "node": ">=0.1.103",
+    "teleport": ">=0.2.0",
+    "addon-sdk": ">=0.9.0"
+  },
+  "licenses": [
+    {
+      "type": "MPL 1.1/LGPL 2.1/GPL 2.0",
+      "url": "http://www.mozilla.org/MPL/"
     }
+  ],
+  "dependencies": {
+    "test": ">=0.0.10",
+    "q": ">=0.1.0"
   }
-, "main": "./lib/meta-promise.js"
-, "scripts": { "test": "node test/all.js" }
-, "engines":
-  { "node": ">=0.1.103"
-  , "teleport": ">=0.2.0"
-  , "addon-sdk": ">=0.9.0"
-  }
-, "licenses" :
-  [ { "type" : "MPL 1.1/LGPL 2.1/GPL 2.0"
-    , "url" : "http://www.mozilla.org/MPL/"
-    }
-  ]
 }
-
